# RingRacers

./: .clang-format  .editorconfig  .gitattributes  .gitignore  .gitlab-ci.yml  .travis.yml  CMakeLists.txt  CMakePresets.json  LICENSE-3RD-PARTY.txt  README.md  alias-bootstrap.sh  appveyor.yml  vcpkg-configuration.json  vcpkg.json
assets/: CMakeLists.txt  README.txt
src/: CMakeLists.txt  Makefile  Makefile.cfg  Sourcefile  am_map.c  am_map.h  apng.c  apng.h  archive_wrapper.hpp  asm_defs.inc  b_bot.c  byteptr.h  command.c  command.h  comptime.c  config.h.in  config_comptime.h.in  console.c  console.h  cvars.cpp  cxxutil.hpp  d_clisrv.c  d_clisrv.h  d_event.h  d_main.c  d_main.cpp  d_main.h  d_net.c  d_net.cpp  d_net.h  d_netcmd.c  d_netcmd.h  d_netfil.c  d_netfil.h  d_player.h  d_think.h  d_ticcmd.h  deh_lua.c  deh_lua.h  deh_soc.c  (+371 more)
src/Makefile.d/: detect.mk  features.mk  nix.mk  util.mk  versions.mk  win32.mk
src/acs/: CMakeLists.txt  acsvm.hpp  call-funcs.cpp  call-funcs.hpp  environment.cpp  environment.hpp  interface.cpp  interface.h  stream.cpp  stream.hpp  thread.cpp  thread.hpp
src/android/: i_cdmus.c  i_main.c  i_net.c  i_sound.c  i_system.c  i_video.c  i_video.h
src/audio/: CMakeLists.txt  chunk_load.cpp  chunk_load.hpp  expand_mono.cpp  expand_mono.hpp  filter.cpp  filter.hpp  gain.cpp  gain.hpp  gme.cpp  gme.hpp  gme_player.cpp  gme_player.hpp  mixer.cpp  mixer.hpp  music_player.cpp  music_player.hpp  ogg.cpp  ogg.hpp  ogg_player.cpp  ogg_player.hpp  resample.cpp  resample.hpp  sample.hpp  sound_chunk.hpp  sound_effect_player.cpp  sound_effect_player.hpp  source.hpp  wav.cpp  wav.hpp  wav_player.cpp  wav_player.hpp  xmp.cpp  xmp.hpp  xmp_player.cpp  xmp_player.hpp
src/blua/: CMakeLists.txt  ldebug.c  lfunc.c  liolib.c  lobject.c  lobject.h  lparser.c  luaconf.h
src/core/: CMakeLists.txt  hash_map.hpp  hash_set.cpp  hash_set.hpp  json.cpp  json.hpp  json_macro.inl  memory.cpp  memory.h  spmc_queue.hpp  static_vec.hpp  string.cpp  string.h  thread_pool.cpp  thread_pool.h  vector.cpp  vector.hpp
src/djgppdos/: i_system.c  internal.h  vid_vesa.c
src/dummy/: i_cdmus.c  i_main.c  i_net.c  i_sound.c  i_system.c  i_video.c
src/hardware/: CMakeLists.txt  hw3dsdrv.h  hw3sound.c  hw3sound.h  hw_batching.c  hw_batching.cpp  hw_batching.h  hw_bsp.c  hw_bsp.cpp  hw_cache.c  hw_cache.cpp  hw_clip.c  hw_clip.h  hw_data.h  hw_defs.h  hw_dll.h  hw_draw.c  hw_draw.cpp  hw_drv.h  hw_glob.h  hw_light.c  hw_light.cpp  hw_light.h  hw_main.c  hw_main.cpp  hw_main.h  hw_md2.c  hw_md2.cpp  hw_md2.h  hw_md2load.c  hw_md2load.cpp  hw_md2load.h  hw_md3load.c  hw_md3load.cpp  hw_md3load.h  hw_model.c  hw_model.cpp  hw_model.h  hw_trick.c  hws_data.h  (+3 more)
src/hud/: CMakeLists.txt  emerald-win.cpp  input-display.cpp  powerup.cpp  spectator.cpp  timer.cpp
src/hwr2/: CMakeLists.txt  blendmode.hpp  blit_postimg_screens.cpp  blit_postimg_screens.hpp  blit_rect.cpp  blit_rect.hpp  hardware_state.hpp  imgui_renderer.cpp  imgui_renderer.hpp  pass.cpp  pass.hpp  pass_blit_postimg_screens.cpp  pass_blit_postimg_screens.hpp  pass_blit_rect.cpp  pass_blit_rect.hpp  pass_imgui.cpp  pass_imgui.hpp  pass_manager.cpp  pass_manager.hpp  pass_postprocess.cpp  pass_postprocess.hpp  pass_resource_managers.cpp  pass_resource_managers.hpp  pass_screenshot.cpp  pass_screenshot.hpp  pass_software.cpp  pass_software.hpp  pass_twodee.cpp  pass_twodee.hpp  patch_atlas.cpp  patch_atlas.hpp  postprocess_wipe.cpp  postprocess_wipe.hpp  resource_management.cpp  resource_management.hpp  screen_capture.cpp  screen_capture.hpp  software_screen_renderer.cpp  software_screen_renderer.hpp  twodee.cpp  (+5 more)
src/io/: CMakeLists.txt  streams.cpp  streams.hpp
src/locale/: en.po  srb2.pot
src/math/: fixed.hpp  line_equation.hpp  line_segment.hpp  traits.hpp  vec.hpp
src/media/: CMakeLists.txt  audio_encoder.hpp  avrecorder.cpp  avrecorder.hpp  avrecorder_feedback.cpp  avrecorder_impl.hpp  avrecorder_indexed.cpp  avrecorder_queue.cpp  cfile.cpp  cfile.hpp  container.hpp  encoder.hpp  options.cpp  options.hpp  options_values.cpp  video_encoder.hpp  video_frame.hpp  vorbis.cpp  vorbis.hpp  vorbis_error.hpp  vp8.cpp  vp8.hpp  vpx_error.hpp  webm.hpp  webm_container.cpp  webm_container.hpp  webm_encoder.hpp  webm_vorbis.hpp  webm_vorbis_lace.cpp  webm_vp8.hpp  webm_writer.hpp  yuv420p.cpp  yuv420p.hpp
src/menus/: CMakeLists.txt  extras-1.c  extras-addons.c  extras-challenges.c  extras-egg-tv.cpp  extras-replay-hut.c  extras-statistics.c  extras-statistics.cpp  extras-wrong.c  main-1.c  main-goner.c  main-goner.cpp  main-profile-select.c  options-1.c  options-data-1.c  options-data-addons.c  options-data-advanced-1.c  options-data-advanced-addon.c  options-data-discord.c  options-data-erase-1.c  options-data-erase-profile.c  options-data-replays.c  options-data-screenshots.c  options-gameplay-1.c  options-gameplay-item-toggles.c  options-hud-1.c  options-hud-online.c  options-profiles-1.c  options-profiles-edit-1.c  options-profiles-edit-accessibility.cpp  options-profiles-edit-controls.c  options-server-1.c  options-server-advanced.c  options-sound.c  options-sound.cpp  options-video-1.c  options-video-advanced.c  options-video-colorprofile.c  options-video-gl.c  options-video-modes.c  (+12 more)
src/modp_b64/: CMakeLists.txt  LICENSE  config.h  modp_b64.c  modp_b64.h  modp_b64_data.h  modp_stdint.h
src/monocypher/: CMakeLists.txt  monocypher.c  monocypher.h
src/nds/: i_video.c  r_nds3d.c
src/objects/: CMakeLists.txt  Sourcefile  adventure-air-booster.c  amps.c  ancient-gear.c  ark-arrow.c  audience.c  bail.c  ball-switch.cpp  ballhog.cpp  battle-ufo.cpp  block.c  broly.c  broly.cpp  broly.hpp  bubble-shield.cpp  bungee.c  charge.c  checkpoint.cpp  cloud.c  crate.cpp  dash-rings.c  destroyed-kart.cpp  dlzothers.c  dlzrocket.c  dlzseasaw.c  drop-target.c  duel-bomb.c  eggball.c  emerald.c  emz-faucet.cpp  exp.c  flame-shield.cpp  flybot767.c  frost-thrower.cpp  fuel.cpp  gachabom-rebound.cpp  gardentop.c  gpzseasaw.c  hyudoro.c  (+38 more)
src/rhi/: CMakeLists.txt  handle.hpp  rhi.cpp  rhi.hpp  shader_load_context.cpp  (+1 more)
src/sdl/: IMG_xpm.c  (+32 more)
(+172 files in other folders)
